# ProViz-AI-Samples

./: .gitignore  DCO.md  README.md
inference_partner_training/: LICENSE  README.md
inference_partner_training/DeepStream/DSCustomCudaKernel/: .clang-format  CMakeLists.txt  README.md  dev-container.docker
inference_partner_training/DeepStream/DSCustomCudaKernel/customlib_impl/: CMakeLists.txt  Makefile  customlib_impl.cpp  simple_kernel.cu  simple_kernel.hpp
inference_partner_training/DeepStream/DSCustomCudaKernel/gstnvdsvideotemplate/: CMakeLists.txt  gstnvdsvideotemplate.cpp  gstnvdsvideotemplate.h
inference_partner_training/DeepStream/DSCustomCudaKernel/includes/: nvdscustomlib_base.hpp  nvdscustomlib_factory.hpp  nvdscustomlib_interface.hpp
inference_partner_training/TensorRT/Models/: fetch_model.py
inference_partner_training/TensorRT/TRTNetworkDefinitionSample/: CMakeLists.txt  README.md  main.cpp  util.h
inference_partner_training/TensorRT/TRTOnnxParserSample/: CMakeLists.txt  README.md  main.cpp  util.h
inference_partner_training/TensorRT/TRTPluginSample/: CMakeLists.txt  README.md  replace_bn.py
inference_partner_training/TensorRT/TRTPluginSample/MyPluginLibrary/MyPlugin/: MyPlugin.cpp  MyPlugin.h
inference_partner_training/TensorRT/TRTPluginSample/MyPluginLibrary/cpp/: MyPluginLibrary.cpp
inference_partner_training/TensorRT/TRTPluginSample/MyPluginLibrary/inc/: MyPluginLibrary.h
inference_partner_training/TensorRT/TRTPluginSample/TRTPluginImportOnnx/: main.cpp
inference_partner_training/TensorRT/TRTPluginSample/TRTPluginInfer/: main.cpp
inference_partner_training/TensorRT/TRTPluginSample/Util/: util.h
onnxruntime_cpp_samples/: CMakeLists.txt  README.md
onnxruntime_cpp_samples/common/: CMakeLists.txt
onnxruntime_cpp_samples/common/inc/: E2EImageUtils.h  onnx_helpers.h
onnxruntime_cpp_samples/common/src/: E2EImageUtils.cpp
onnxruntime_cpp_samples/cuda_provider/: CMakeLists.txt  README.md
onnxruntime_cpp_samples/cuda_provider/inc/: CUDAInference.h  FormatConversion.cuh  NVIDIAInference.h  ProcessingTemplate.h  TRTInference.h  cuda_helpers.cuh
onnxruntime_cpp_samples/cuda_provider/src/: CUDAInference.cpp  FormatConversion.cu  NVIDIAInference.cpp  TRTInference.cpp  cuda_sample.cpp
onnxruntime_cpp_samples/dml_provider/: CMakeLists.txt  README.md
onnxruntime_cpp_samples/dml_provider/inc/: Common.h  DXQueue.h  OrtBuffer.h  OrtDXUtils.h  OrtInference.h
onnxruntime_cpp_samples/dml_provider/shader/: postprocess_scale_nchw_to_nhwc_fp16.hlsl  postprocess_scale_nchw_to_nhwc_fp32.hlsl  preprocess_scale_nhwc_to_nchw_fp16.hlsl  preprocess_scale_nhwc_to_nchw_fp32.hlsl
onnxruntime_cpp_samples/dml_provider/src/: DXQueue.cpp  OrtBuffer.cpp  OrtDXUtils.cpp  OrtInference.cpp  dml_sample.cpp
onnxruntime_cpp_samples/models/: HierTest4EncNoBNModel.onnx  HierTest4EncNoBNModel_fp16.onnx  ISRModel2X.onnx  ISRModel2X_fp16.onnx
